Fixed plus button alignment when empty

--- a/src/css/components/_TemplateBuilder.scss
+++ b/src/css/components/_TemplateBuilder.scss
@@ -84,7 +84,6 @@
         padding: 0 0.5rem;
         opacity: 0.7;
         font-style: italic;
-        flex: 1;
         line-height: 1;
     }
 
